apps/subsystems/obsidian-vault/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: obsidian-vault
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
    kustomize.toolkit.fluxcd.io/ssa: merge
